Some fixes and added a scroll bar to the display in case of overflow.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
 .display {
     font-size: 50px;
     text-align: right;
+    overflow-x: scroll;
+    width: 420px;
 }
 
 .digit,
@@ -32,6 +34,7 @@ body {
     width: 80px;
     height: 80px;
     margin-top: 3px;
+    font-size: 25px;
 }
 
 .button-box2 {
@@ -53,4 +56,5 @@ body {
 
 .equal {
     flex-grow: 1;
+    font-size: 40px;
 }
